--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,13 @@
 
 .custom-restricted-width {
     /* To limit the menu width to the content of the menu: */
-    display: inline-block;
-    /* Or set the width explicitly: */
-    /* width: 10em; */
+    /* display: inline-block; */
 }
 
 
 #navbar {
-    position: fixed;
+    /* position: fixed; */
+    margin-right: 1rem;
     height: 100%;
     background-color: #34495e;
 }
@@ -37,7 +36,7 @@
 }
 
 .pure-menu-heading {
-    margin-top: 2rem;
+    padding-top: 2.5rem;
     font-weight: bold;
     color: white;
 }
